# noise-adaptive-spectral-embedding

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ambiguous_gap_baseline.yaml  ambiguous_gap_suite.yaml  eigengap_ambiguous_suite.yaml  intrinsic_dim_circle_sphere.yaml  intrinsic_dim_swiss_roll.yaml  noise_sweep_circle_sphere.yaml  r_based_plan_base.yaml  r_estimation_circle_sphere.yaml  r_estimation_swiss_roll.yaml  r_validation_known_r.yaml  smoke_small.yaml  swiss_roll_stability.yaml  synthetic_bandwidth_sweep.yaml  synthetic_noise_sweep.yaml  synthetic_plan_base.yaml  threshold_sensitivity_circle.yaml  torus_noise_sweep.yaml
docs/: experiments.md  methodological_note.md  methodology.md
docs/references/: CITATIONS.md
final_report/: main.tex  neurips_2025.sty  references.bib
reports/: completeness_audit.md  final_report.md  repo_audit.md  results_digest.md
results/20260227_182454_swiss_roll_stability/: metrics.json
results/20260227_183927_swiss_roll_stability/: config.yaml  diagnostics.json  metrics.json
results/20260227_183932_synthetic_noise_sweep/: aggregate.json  manifest.json  (+2 more)
scripts/: analyze_empirical_r.py  analyze_r_estimation.py  analyze_results.py  visualize_manifolds.py
tests/: test_cli_plot_from_results.py  test_cutoffs.py  test_data.py  test_dss.py  test_experiment_outputs.py  test_graphs.py  test_intrinsic_dimension.py  test_metrics_edge_cases.py  test_plots.py  test_runner_smoke.py  test_spectral.py  test_subspace_metrics.py  test_synthetic.py
(+540 files in other folders)
